kustomize-argoupdater/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - image: minho7336/argoupdater:1.0
        name: sample
        ports:
        - containerPort: 5000
